--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "Psy-World"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "BadRTXXX / Psy-World"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "BadRTXXX"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://badrtxxx.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
